<resources>
    <string name="app_name">Student Manager</string>
    <string name="name">Name</string>
    <string name="roll_number">Roll Number</string>
    <string name="hintclass">Class</string>
    <string name="student_details">Student Details</string>
    <string name="no_students_added_till_yet">No students added till yet!!!</string>
    <string name="view">View</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="add_student">Add Student</string>
    <string name="sort_by_name">Sort By Name</string>
    <string name="sort_by_roll_number">Sort By Roll Number</string>
    <string name="popUpError">Something went wrong</string>
    <string name="deleteConfirmation">Are you sure want to delete ?</string>
    <string name="cancel">Cancel</string>
    <string name="studentObject">studentObject</string>
    <string name="notUniqueRollNo">Not a Unique Roll Number</string>
    <string name="notValidName">Thats not a valid Name</string>
    <string name="notValidRollNo">Enter a valid Roll Number between 1 and 9999</string>
    <string name="notValidClass">Enter a valid Class between 1 and 12</string>
    <string name="notEmpty">Can\'t be empty</string>
    <string name="update">Update</string>
    <string name="selectServiceType">Please Select the type of Service</string>
    <string name="service">Service</string>
    <string name="intent_service">Intent Service</string>
    <string name="async">Async</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
