<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.AddStudentActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="50dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="50dp"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <ImageButton
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:src="@drawable/ic_launcher_background"/>

        <EditText
            android:id="@+id/name"
            style="@style/DarkStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:hint="@string/name"/>

        <EditText
            android:id="@+id/rollNumber"
            style="@style/DarkStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/roll_number"
            android:inputType="number"/>

        <EditText
            android:id="@+id/myClass"
            style="@style/DarkStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hintclass"
            android:inputType="number"/>

        <Button
            android:id="@+id/addStudent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:background="@color/colorPrimary"
            android:text="@string/add_student"
            android:textColor="#fff"/>
    </LinearLayout>
</RelativeLayout>