<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.ViewStudentActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="@dimen/text_size_tiny"
        android:layout_marginTop="@dimen/margin_padding_xxlarge"
        android:layout_marginRight="@dimen/text_size_large"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <ImageButton
            android:layout_width="@dimen/margin_padding_xxlarge"
            android:layout_height="@dimen/margin_padding_xxlarge"
            android:src="@drawable/ic_launcher_background"/>

        <EditText
            android:id="@+id/et_name_activity_add_student"
            style="@style/DarkStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_padding_xxlarge"
            android:hint="@string/name"/>

        <EditText
            android:id="@+id/et_rollNumber_activity_add_student"
            style="@style/DarkStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/roll_number"
            android:inputType="number"/>

        <EditText
            android:id="@+id/et_Class_activity_add_student"
            style="@style/DarkStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hintclass"
            android:inputType="number"/>

        <Button
            android:id="@+id/btn_addStudent_activity_add_student"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_padding_xxlarge"
            android:background="@color/colorPrimary"
            android:text="@string/add_student"
            android:textColor="@color/white_color"/>
    </LinearLayout>
</RelativeLayout>