<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="wrap_content"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="@dimen/width_xxxlarge"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <Button
            android:id="@+id/viewStudent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/view"
            android:background="@color/dialogPopUp"
            android:drawableLeft="@drawable/ic_pageview_black_24dp"
            style="@style/textStyle"
            android:paddingStart="@dimen/margin_padding_normal"
            android:gravity="center"
            android:layout_gravity="center"
            android:drawableStart="@drawable/ic_pageview_black_24dp"
            android:paddingLeft="@dimen/margin_padding_normal"
            android:layout_margin="@dimen/margin_padding_xxtiny"
            />

        <Button
            android:id="@+id/editStudent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/edit"
            android:background="@color/dialogPopUp"
            android:drawableLeft="@drawable/ic_update_black_24dp"
            style="@style/textStyle"
            android:paddingStart="@dimen/margin_padding_normal"
            android:gravity="center"
            android:layout_gravity="center"
            android:drawableStart="@drawable/ic_update_black_24dp"
            android:paddingLeft="@dimen/margin_padding_normal"
            android:layout_margin="@dimen/margin_padding_xxtiny"/>


        <Button
            android:id="@+id/deleteStudent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/delete"
            android:background="@color/dialogPopUp"
            android:drawableLeft="@drawable/ic_delete_sweep_black_24dp"
            style="@style/textStyle"
            android:paddingStart="@dimen/margin_padding_normal"
            android:gravity="center"
            android:layout_gravity="center"
            android:drawableStart="@drawable/ic_delete_sweep_black_24dp"
            android:paddingLeft="@dimen/margin_padding_normal"
            android:layout_margin="@dimen/margin_padding_xxtiny"/>
    </LinearLayout>


</RelativeLayout>