<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:id="@+id/header"
            android:orientation="horizontal"
            android:background="@color/colorPrimary"

            >
            <TextView
                android:id="@+id/tvHeading"
                android:layout_height="match_parent"
                android:layout_width="0dp"
                android:text="@string/student_details"
                android:gravity="center"
                style="@style/textStyle"
                android:layout_weight="1"
                />

            <ImageButton
                android:id="@+id/ibSort"
                android:padding="15dp"
                android:layout_height="match_parent"
                android:background="@null"
                android:src="@drawable/ic_sort_by_alpha_black_24dp"
                android:layout_width="wrap_content" />
            <ImageButton
                android:id="@+id/ibChangeView"
                android:padding="15dp"
                android:layout_height="match_parent"
                android:background="@null"
                android:src="@drawable/ic_swap_horiz_black_24dp"
                android:layout_width="wrap_content" />

        </LinearLayout>
        <android.support.v7.widget.RecyclerView
            android:id="@+id/studentRecyclerView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/header"
            android:layout_above="@+id/buttonLayout"
            >



        </android.support.v7.widget.RecyclerView>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <TextView
                android:id="@+id/noStudentMessage"
                android:text="@string/no_students_added_till_yet"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                />


        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:gravity="bottom"
            android:id="@+id/buttonLayout"
            >
            <Button
                android:id="@+id/addStudentButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/add_student"
                android:background="@color/colorPrimary"
                android:textColor="#fff"
                />
        </RelativeLayout>
</RelativeLayout>